--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,7 @@ script:
   - hexo g
 
 after_script:
-  - cd ./public
-  - git init
-  - git config user.name "HelloWood"
-  - git config user.email "hellowoodes@gmail.com"
-  - git add .
-  - git commit -m "update"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
-
+  - hexo d
 
 env:
  global:
