--- a/themes/vexo/_config.yml
+++ b/themes/vexo/_config.yml
@@ -44,7 +44,7 @@ google_analytics:
 disqus_shortname: 
 
 about: 
-  banner: http://file.muyutech.com/about.jpg
+  banner: http://hellowood.oss-cn-beijing.aliyuncs.com/blog/background.jpeg
   avatar: https://hellowood.oss-cn-beijing.aliyuncs.com/head.png
   description: "There is path for anyone"
   github_username: helloworlde
