--- a/_config.yml
+++ b/_config.yml
@@ -103,4 +103,4 @@ theme: vexo
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/helloworlde/helloworlde.github.io.git
+  repo: git@github.com:helloworlde/helloworlde.github.io.git
